# micro-gpt

./: .env.example  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_REGISTRY.md  LICENSE  LICENSES.md  MODEL_REGISTRY.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/tests/: test_api.py  test_maturity.py  test_safety.py
cpp/: README.md
cpp/benchmarks/: README.md
data/manifests/: document_registry.json
datascience/niche_evaluator/: README.md
docs/: ARCHITECTURE.md  FUTURE_ROADMAP.md  OPEN_SOURCE_GOVERNANCE.md  PHASE_0_COMPLETION.md  RUN_LOCAL.md  SAFETY_AND_MATURITY.md
docs/adr/: 0001-cpu-first-open-source-platform.md  0002-secure-login-and-maturity-gate.md  ADR-0001-local-first.md  ADR-0002-open-source-dependency-gate.md  ADR-0003-secure-login-and-maturity-gates.md  ADR-0004-runtime-adapter-and-no-model-fallback.md  ADR-0005-microlake-event-log.md  ADR-0006-llama-cpp-cpu-runtime.md  ADR-0007-document-identity-provenance.md  ADR-0008-llama-cli-runtime.md  ADR-0009-llama-cli-output-cleanup.md
docs/architecture/: MicroGPT_Local_Cognitive_Engine_Architecture_v0.6.md
docs/licenses/: DEPENDENCY_APPROVAL_WORKFLOW.md
evals/latency/: README.md
models/: model_registry.example.json
scripts/: benchmark_runtime.py  build_llama_cpp_cpu.sh  check_documents.py  generate_secret.py  init_dev.py  smoke_test.sh
tests/: test_api.py
(+38 files in other folders)
