[project]
name = "microgpt-local"
version = "0.1.0"
description = "MicroGPT Local Cognitive Engine Phase 1 starter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shayar Shrestha" }
]
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "PyJWT>=2.10,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "httpx>=0.28,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
