[project]
name = "microgpt-local"
version = "0.2.0"
description = "MicroGPT Local Cognitive Engine Phase 2 starter"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Shayar Shrestha" }
]
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "PyJWT>=2.10,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "httpx>=0.28,<1.0"
]
llama = [
  "llama-cpp-python>=0.3.9,<0.4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["microgpt*"]
exclude = ["data*", "models*", "vault*", "docs*", "tests*", "scripts*", "cpp*", "julia*", "evals*", "datascience*"]
